
ADD_SUBDIRECTORY(loadRobot)

ADD_SUBDIRECTORY(RobotViewer)
ADD_SUBDIRECTORY(RobotViewerOSG)
ADD_SUBDIRECTORY(SceneViewer)
ADD_SUBDIRECTORY(Jacobi)
ADD_SUBDIRECTORY(GenericIK)
ADD_SUBDIRECTORY(reachability)
ADD_SUBDIRECTORY(stability)
ADD_SUBDIRECTORY(GraspEditor)

ADD_SUBDIRECTORY(ReachabilityMap)
ADD_SUBDIRECTORY(loadURDFRobot)

