PROJECT ( RRTdemo )

CMAKE_MINIMUM_REQUIRED(VERSION 2.6.4)

CMAKE_POLICY(VERSION 2.6)

INCLUDE_DIRECTORIES(${SABA_DIR})

IF(SIMOX_VISUALIZATION AND SIMOX_USE_COIN_VISUALIZATION)

    LINK_DIRECTORIES(${SIMOX_LIB_DIR})

    # the variable "demo_SRCS" contains all .cpp files of this project
	FILE(GLOB demo_SRCS ${PROJECT_SOURCE_DIR}/RRTdemo.cpp)
    
    ADD_EXECUTABLE(${PROJECT_NAME} ${demo_SRCS})
    SET_TARGET_PROPERTIES(${PROJECT_NAME} PROPERTIES FOLDER "Examples")
    SET_TARGET_PROPERTIES(${PROJECT_NAME} PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${SIMOX_BIN_DIR})

    TARGET_LINK_LIBRARIES(${PROJECT_NAME} VirtualRobot Saba ${SIMOX_VISUALIZATION_LIBS})
    INCLUDE_DIRECTORIES(${SIMOX_VISUALIZATION_INCLUDE_PATHS})
    INCLUDE(${QT_USE_FILE})
    ADD_DEFINITIONS(${SIMOX_VISUALIZATION_COMPILE_FLAGS})

    INSTALL(TARGETS ${PROJECT_NAME}
        DESTINATION ${SABA_INSTALL_BIN_DIR})
        
    MESSAGE( STATUS ${PROJECT_NAME} " will be placed into " ${SIMOX_BIN_DIR})
    MESSAGE( STATUS ${PROJECT_NAME} " will be installed into " ${SABA_INSTALL_BIN_DIR})
ENDIF()
